# rdb

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: cpp.yaml  tests.yml
src/: client.cpp  config.h  protocol.hpp  room_manager.hpp  server.cpp  socket_utils.h  socket_utils.hpp  thread_pool.hpp
src/json/: create-file.hpp  delete-file.hpp  get-file.hpp  read-file.hpp  update-file.hpp
src/utils/: logger.hpp  random-id.hpp  split.hpp
tests/: test_protocol.cpp  test_random_id.cpp  test_room_manager.cpp  test_socket_utils.cpp  test_split.cpp  test_thread_pool.cpp
